<resources>
    <string name="app_name">TSTComp</string>
    <string name="application_full_name">Техника Спортивного\nТуризма</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_item_competitions">Соревнования</string>
    <string name="navigation_drawer_item_peoples">Люди</string>
    <string name="navigation_drawer_item_encyclopedia">Энциклопедия</string>
    <string name="navigation_drawer_item_calculator">Калькулятор</string>
    <string name="title_calculator">Калькулятор</string>
    <string name="title_competition">Соревнования</string>
    <string name="title_new_competition">Новое соревнование</string>
    <string name="title_stage_on_competition">Этапы соревнования</string>
    <string name="title_add_stage">Добавить этап</string>
    <string name="title_members">Участники соревнования</string>
    <string name="title_new_members">Добавить участника</string>
    <string name="title_attempt">Заезд</string>
    <string name="action_settings">Настройки</string>
    <string name="action_home">Соревнования</string>
    <string name="main_activity_toolbar_subtitle">Список соревнований</string>
    <string name="main_activity_long_click_dialog_title">Удалить соревнование?</string>
    <string name="main_activity_long_click_dialog_positive">Удалить</string>
    <string name="main_activity_long_click_dialog_negative">Отмена</string>
    <string name="new_competition_activity_field_create_new_competition">Создать новое соревнование</string>
    <string name="new_competition_activity_field_date">Дата</string>
    <string name="new_competition_activity_field_name">Название</string>
    <string name="new_competition_activity_field_place">Место проведения</string>
    <string name="new_competition_activity_field_type">Вид туризма</string>
    <string name="new_competition_activity_field_distance">Дистанция</string>
    <string name="new_competition_activity_field_rank">Класс</string>
    <string name="new_competition_activity_field_penalty">Штраф (сек)</string>
    <string name="new_competition_activity_button_to_stages">Сохранить и выбрать этапы</string>
    <string name="new_competition_activity_button_to_members">Сохранить и перейти к участникам</string>
    <string name="add_stage_activity_toolbar_subtitle">Добавить этапы</string>
    <string name="add_stage_activity_dialog_list_item_negative">Хорошо</string>
    <string name="stage_on_competition_toolbar_subtitle">Этапы на соревновании</string>
    <string name="stage_on_competition_list_item_dialog_title">Удалить?</string>
    <string name="stage_on_competition_list_item_dialog_positive">Удалить</string>
    <string name="stage_on_competition_list_item_dialog_negative">Отмена</string>
    <string name="attempt_activity_toolbar_subtitle">Заезд</string>
    <string name="new_competition_activity_toolbar_subtitle">Создать соревнование</string>
    <string name="new_competition_activity_error_no_date">Введите дату!</string>
    <string name="new_competition_activity_error_no_name">Введите название!</string>
    <string name="new_competition_activity_error_no_rank">Класс соревнований обязателен!</string>
    <string name="new_competition_activity_error_no_penalty_cost">Введите стоимость штрафа!</string>
    <string name="members_activity_toolbar_subtitle">Список участников</string>
    <string name="members_activity_toast_error_already_finished">Этот участник уже прошел дистанцию</string>
    <string name="new_members_activity_toolbar_subtitle">Добавить участника</string>
    <string name="new_members_activity_error_last_name_required">Фамилия обязательна!</string>
    <string name="new_members_activity_error_first_name_required">Имя обязательно!</string>
    <string name="new_members_activity_button_new_member">Добавить участника</string>
    <string name="new_members_activity_button_edit_member">Отредактировать</string>
    <string name="competition_complete_dialog_title">Завершить соревнование?</string>
    <string name="competition_complete_dialog_message">Поменять ничего нелдьзя будет</string>
    <string name="competition_complete_dialog_negative">Отмена</string>
    <string name="competition_complete_dialog_positive">Завершить</string>
    <string name="maim_layout_rank_concat">"-й класс"</string>
    <string name="excel_sheet_title">Протокол соревновний по спортивному туризму</string>
    <string-array name="competition_header">
        <item>Дата</item>
        <item>Название</item>
        <item>Место проведения</item>
        <item>Вид туризма</item>
        <item>Дистанция</item>
        <item>Класс</item>
        <item>Штраф, сек</item>
    </string-array>
    <string name="excel_result_start_number">Стартовый номер</string>
    <string name="excel_result_team">Команда</string>
    <string name="excel_result_full_name">ФИО</string>
    <string name="excel_result_birthday">Дата рождения</string>
    <string name="excel_result_distance_time">Время дистанции</string>
    <string name="excel_result_penalty_total">Сумма штрафов</string>
    <string name="excel_result_result_time">Результат</string>
    <string name="excel_result_place_number">Место</string>
    <string-array name="import_to_db_genders">
        <item>Жен</item>
        <item>Муж</item>
    </string-array>
    <string name="type_bike">Велосипедный</string>
    <string-array name="import_to_db_types_of_tourism">
        <item>@string/type_bike</item>
    </string-array>
    <string name="bike_distance_rally">Ралли</string>
    <string name="bike_distance_figure_ride">Фигурное вождение</string>
    <string name="bike_distance_cross">Кросс</string>
    <string name="bike_distance_trial">Туристский триал</string>
    <string name="bike_distance_complex">Комплексная дистанция</string>
    <string-array name="import_to_db_distances_for_bike">
        <item>@string/bike_distance_rally</item>
        <item>@string/bike_distance_figure_ride</item>
        <item>@string/bike_distance_cross</item>
        <item>@string/bike_distance_trial</item>
        <item>@string/bike_distance_complex</item>
    </string-array>
    <string name="bike_rally_stage_traffic_laws">Правила дорожного движения</string>
    <string name="bike_rally_stage_medicine">Оказание первой доврачебной помощи</string>
    <string name="bike_rally_stage_cargo">Крепление и перевозка груза</string>
    <string name="bike_rally_stage_tent">Установка палатки</string>
    <string name="bike_rally_stage_bonfire">Распаливание костра</string>
    <string name="bike_rally_stage_azimuth_spot">Определение азимута</string>
    <string name="bike_rally_stage_repair">Ремонт велосипеда</string>
    <string name="bike_rally_stage_off_road">Движение по бездорожью</string>
    <string name="bike_rally_stage_schedule">Движение по графику</string>
    <string name="bike_rally_stage_speed">Скоростной участок</string>
    <string name="bike_rally_stage_uphill">Подъем в гору</string>
    <string name="bike_rally_stage_downhill">Спуск по склону</string>
    <string name="bike_rally_stage_sand">Песчаный этап</string>
    <string name="bike_rally_stage_furrow">Колея</string>
    <string name="bike_rally_stage_azimuth_ride">Движение по азимуту</string>
    <string name="bike_rally_stage_orienteering">Ориентирование</string>
    <string name="bike_rally_stage_wade">Преодоление брода</string>
    <string name="bike_rally_stage_knots">Вязание узлов</string>
    <string name="bike_rally_stage_crossing_on_deck">Переправа через реку или яр по колоде</string>
    <string name="bike_rally_stage_azimuth_ride_description">Этап устраивается между двумя дорогами или тропами, расположенных на расстоянии 200–500 м. На дороге, ведущей к финишу, через 5–10 м устанавливаются пронумерованные таблички. На старте этапа команде указывается азимут на один из ориентиров. При выходе на финишную дорогу капитан записывает в контрольную карточку номер таблички, на которую вышла команда.</string>
    <string name="bike_rally_stage_azimuth_ride_penalty_info">Штрафуется отклонение от настоящего направлении (по 1-му баллу за каждый градус). Исправления в контрольных карточках штрафуется в 10 баллов.</string>
    <string name="bike_rally_stage_azimuth_spot_description">Выполняется поочередно каждым участником. Компас судейский.</string>
    <string name="bike_rally_stage_azimuth_spot_penalty_info">Штрафуется (по 1 баллу) отклонения на каждые ± 3 град. от истинного (действительного) значения азимуту на указанный судьей ориентир. Время пребывания на этапе идет за счет времени между контрольными пунктами</string>
    <string name="bike_rally_stage_bonfire_description">Целью соревнования является доведение до кипения определенного количества воды в судейской посуде на огне, раскаленном дровами. Финишем есть момент стабильного кипения воды. Принадлежности для костра и дрова - судейские. Количество спичек не ограничивается. Использование горючих жидкостей, взрывоопасных и горючих веществ не допускается. Задание выполняется с учетом времени от старта до финиша в секундах</string>
    <string name="bike_rally_stage_bonfire_penalty_info">Штрафуется использования при разжигании одновременно более 1-го спички (по 1 баллу за каждый дополнительный спичку)</string>
    <string name="bike_rally_stage_cargo_description">Задача проводятся непосредственно на старте дистанции велоралли после \"правил дорожного движения\" и \"Оказание первой доврачебной помощи\" в счет времени между контрольными пунктами. После сигнала «Старт» участники поднимают груз к велосипедам, находящихся на расстоянии 8–10 м в направлении дальнейшего движения, закрепляют его на задних багажниках и транспортируют до финиша. Возможна проверка веса на любом КП дистанции.</string>
    <string name="bike_rally_stage_cargo_penalty_info">Штрафуется потеря груза (2 балла за каждый неполный килограмм)</string>
    <string name="bike_rally_stage_crossing_on_deck_description">Длина заранее заключенного бревна – 5–8 м, диаметр – 25–30 см. Место под бревном должно быть очищено и освобождены от посторонних предметов. Веревки применяются судейские. Препятствие преодолевается участниками по очереди. Груз и велосипеды транспортируются по перилам отдельно. Участники переправляются поочередно с применением страховки вспомогательной веревкой. Фиксируется время преодоления этапа.</string>
    <string name="bike_rally_stage_crossing_on_deck_penalty_info">Штрафы: неправильная страховка, сопровождение - 3 балла; временное отсутствие страховки, сопровождения - 5 баллов; использование опоры за ограничением - 5 баллов; срыв с зависанием на судейской страховке - 5 баллов; потеря основной веревки или контрольного груза - 5 баллов; оставленное снаряжение после окончания этапа - 10 баллов.</string>
    <string name="bike_rally_stage_downhill_description">Длина этапа до 100 м, крутизна склона – не более 20 град (36.5%). На грунтовом склоне прокладывается дистанция спуска с 3–5 поворотами под углом до 90 °. Места поворотов сказываются не менее чем двумя флажками и ограничительными линиями шириной до 2 м. Дистанция преодолевается поочередно отдельно каждым участником.</string>
    <string name="bike_rally_stage_downhill_penalty_info">Штрафуется каждое прикосновение ногой земли (по 1 баллу), выезд за ограничение и падение участника (велосипеда) - по 3 балла. Время пребывания на этапе идет за счет времени между контрольными пунктами</string>
    <string name="bike_rally_stage_furrow_description">Используется участок пути, что путь глубиной 0,5–0,6 м, длиной до 10 м и шириной до 0,6 м. Колея может быть наполнена водой и быть косвенным.</string>
    <string name="bike_rally_stage_furrow_penalty_info">Штрафуется каждое прикосновение ногой земли (по 1 баллу), выезд за ограничение и падение участника (велосипеда) - по 3 балла. Время пребывания на этапе идет за счет времени между контрольными пунктами</string>
    <string name="digit_5">5</string>
</resources>