<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/trophy"
            android:title="@string/navigation_drawer_item_competitions" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/account_multiple"
            android:title="@string/navigation_drawer_item_peoples"
            android:enabled="false" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/book_open_page_variant"
            android:title="@string/navigation_drawer_item_encyclopedia"
            android:enabled="false" />
        <item
            android:id="@+id/nav_calculator"
            android:icon="@drawable/calculator"
            android:title="@string/navigation_drawer_item_calculator" />
    </group>

    <item android:title="Additional">
        <menu>
            <item
                android:id="@+id/attempt"
                android:icon="@drawable/magnify"
                android:title="Attempt"
                android:enabled="false"/>
            <item
                android:id="@+id/nav_dbhelp"
                android:icon="@drawable/information_variant"
                android:title="DBHelper" />
        </menu>
    </item>

</menu>
